--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <fieldset>
             <legend>Sign-up to our <br> newsletter!</legend>
             <label for="name">Name*</label>
-            <input type="text" placeholder="Enter your name" name="name" id="name">
+            <input type="text" required placeholder="Enter your name" name="name" id="name">
             <label for="email">E-mail*</label>
-            <input type="email" placeholder="Enter your email" name="email" id="email">
+            <input type="email" required placeholder="Enter your email" name="email" id="email">
             <label for="meal-select">Favorite meal of the day: </label>
             <select name="meal-select"  id="mealSelect">
               <option value="" selected>Favorite pastry...</option>
